# frisquet-api

./: pyproject.toml
src/frisquet_api/: client.py  interface.py
tests/: test_client.py
